Add CSRF tag to the registration form to prevent error.
Got the 403 Forbidden response without this. (#223)

--- a/gobotany/plantshare/templates/registration/registration_form.html
+++ b/gobotany/plantshare/templates/registration/registration_form.html
@@ -15,6 +15,7 @@ maps, checklists, and much more!</p>
 with a link to activate your account.</p>
 
 <form method="post" action=".">
+    {% csrf_token %}
     {{ form.as_p }}
     <input type="submit" class="button" value="Register" />
 </form>
